<resources>
    <string name="app_name">Kalrav</string>
    <string name="facebook_app_id">1797444317164217</string>
    <string name="fb_login_protocol_scheme">fb1797444317164217</string>
    <string name="facebook_logout">SIgn Out</string>
    <string name="title_activity_home">Home</string>
    <string name="company_name">Kalrav Arts</string>
    <string name="all_eye_here">All eye here</string>

    <string name="double_tap_enabled">Double tap enabled</string>
    <string name="double_tap_disabled">Double tap disabled</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_drama">Drama</string>
    <string name="nav_notifications">Notification</string>
    <string name="nav_photos">Photo</string>
    <string name="nav_bookmark">Bookmarks</string>
    <string name="nav_mydrama">My Drama</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="my_tickets">My Tickets</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Drama</item>
        <item>Notification</item>
        <item>Bookmark</item>
        <item>Booked Tickets</item>
        <item>My Drama</item>
        <item>Settings</item>
        <item>Detail Drama</item>
    </string-array>

    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">fragment fav</string>
    <string name="first_row">First Row Seat</string>
    <string name="middle_row">Middle Row Seat</string>
    <string name="last_row">Last Row Seat</string>

    <string name="last_row_price">350</string>
    <string name="middle_row_price">250</string>
    <string name="first_row_price">180</string>
    <string name="confirm_seats">Confirm Seats</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="activity_service_name">Service</string>


    <string name="banner_ad_unit_id">ca-app-pub-2091012524875733/2660775800</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_Setting">SettingActivity</string>
    <string name="title_activity_basic_banner">BasicBannerActivity</string>

    <!--Confirm Screen -->
    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter Email id</string>
    <string name="hint_phone_no">Enter Phone Number</string>
    <string name="hint_confirm_code">Confirmation Code</string>
    <string name="hint_seat_no">Seat Number</string>
    <string name="hint_no_of_booked_seats">Total Number of Seats</string>
    <string name="hint_time_slot">Time Slot</string>
    <string name="hint_audi_name">Auditorium Name</string>
    <string name="hint_total_price">Total Price</string>


    <!-- validation Message -->
    <string name="error_emailid">Email is not valid</string>
    <string name="error_mobile_no_required">Mobile number is Required</string>
    <string name="error_valid_mobile_no">Please enter valid mobile no</string>
    <string name="error_conformationCode">Please Book Your Ticket</string>
    <string name="error_seats">You have not Selected Seats</string>
    <string name="error_timeslot">Time Slot is not available </string>
    <string name="error_auditorium">Please enter auditorium name</string>
    <string name="error_total_price">Total Price is not available</string>

    <string name="network_connection">Please check your network connection</string>
    <string name="no_data_available">No data available</string>
    <string name="something_went_wrong">Something went wrong please try again later...</string>
    <string name="unknown_error">Unknown Error please Contact to Support Team</string>

    <string name="login_cancel">Login Cancelled...</string>
    <string name="login_error">Login Error: Check network connection...</string>
    <string name="authentication_failed">Authentication failed...</string>

    <string name="about_us">Kalrav mobile application is a ticketing system built for event organisers. Organisers can host events like Drama, Musical, Opera etc… for their set of registered users. It notifies date and time of the events and allow users to book the tickets online.</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
