<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drama"
            android:icon="@mipmap/ic_launcher_theatre"
            android:title="@string/nav_drama" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@mipmap/ic_launcher_notif"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/photos"
            android:title="@string/nav_photos" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/logout"
                android:orderInCategory="100"
                android:title="@string/facebook_logout" />
        </menu>
    </item>

</menu>