<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="5dip"
    android:layout_height="match_parent">
    <TextView

        android:id="@+id/textLastRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/last_row" />
    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/textLastRow"
        android:layout_margin="5dip"
        android:id="@+id/recycleLastRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/textMiddleRow"
        android:layout_below="@+id/recycleLastRow"
        android:layout_margin="5dip"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/middle_row" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleMiddleRow"
        android:layout_below="@+id/textMiddleRow"
        android:layout_margin="5dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/textFirstRow"
        android:layout_below="@+id/recycleMiddleRow"
        android:layout_margin="5dip"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_row" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleFirstRow"
        android:layout_below="@+id/textFirstRow"
        android:layout_margin="5dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>